Verion 0.9.45dev (?? ??? 2004)
  - Added check for webcalendar db tables right after initial db connection.
    Give user an error if tables not found.
  - Modified user-*.php to tell user either "no such user" or
    "incorrect password".  This should help sysadmins trying to setup
    WebCalendar figure out why a login is not working.
  - Fixed bug 1061702: site extras (reminder info) not showing up
    properly in event popups
  - Reorganizing styles.php to be more logical
  - Adding new help & '+' images
  - A few minor style changes to remedy problems with views
  - Applying patch 1061811: leading &amp; in minicals week url
  - Applying patch 1062782: view_t styles moving to styles.php
  - Fixing bug 1062275: border thickness in various views
  - Fixing bug 1060781: reenabling print-media stylesheet
  - Refixing bug 1062276: editing single date of a repeating event
  - Fixed bug 1063720: advanced search translation
  - Making search page dynamic on the client-side for admins
  - Combining & converting import/export pages to new tabbed GUI
  - Edited import/export link in trailer
  - Fixed bug 1009183: exporting event from another user's calendar or
    from a layer generated an empty ics file.  Added "Include all layers"
    option on main export page also.  Include WebCalendar version number
    in ics file.
  - Removing blank lines from the end of files
  - Temporarily disabling the print-media stylesheet
  - Fixing a TON of bugs in almost all of the views NOTE: view_m, day, and
  week.php are in need of a major php code overhaul to fix some of the
  remaining bugs
  - Fixed bug 1060764: forgot to add translation stuff to "public access" in
  trailer
  - Fixed bug 1060779: also forgot to translation stuff for "preview" views
  - Fixing bug 1060784: "category" id in functions.php because it caused a conflict with category.php
  - Added a favicon.ico and supporting code
  - Adding new edit_entry & admin.php code (tabbed GUI)